2002-06-03  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.[ch]: 
	(gda_config_get_type): new function to get the type of an entry.

	(gda_config_has_key):
	(gda_config_has_section): also look for section/keys in global data.
	
	(gda_config_read_entries): When reading from the configuration file,
	set the value to "" if it is NULL.

2002-06-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.c (gda_config_get_data_source_list): retrieve
	password from configuration.
	(gda_config_copy_data_source_info): copy the new member.
	(gda_config_free_data_source_info): free the new member.
	(gda_config_get_data_source_model): added 'Password' column to the
	data model we create.
	(gda_config_save_data_source): store the password if it is set.
	Reverted last Gonzalo's change, since it was wrong.

	* libgda/gda-connection.c (gda_connection_new): pass over the
	correct user name/password, either from the user supplied values,
	or from the configuration itself.

	* doc/C/libgda-docs.sgml: added more documentation about the
	configuration file format.

2002-06-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-config.c: little fixes in gda_config_save_data_source
	(cut&paste errors).

2002-06-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* configure.in: check for headers needed by gda-config-tool.

	* tools/Makefile.am: don't try to build gda-config-tool if needed 
	headers and/or libs not found.

2002-06-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* tools/gda-config-tool.c: added support for writing the configuration
	to a file.

2002-06-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* tools/Makefile.am: build gda-config-tool only if all needed
	libraries are found in configure.

2002-06-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* tools/gda-config-tool.c: fixed leaks. Beautified help output.
	Added support for adding/editing an entry.

2002-06-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
